Enabling weight brush in particle edit mode of a hair particle system will cause a crash when entering an emitter system edit mode. #53823

Closed
opened 2018-01-18 12:13:30 +01:00 by ronan ducluzeau · 5 comments

System Information
Ubuntu 16.04 and Nvidia Ttan Black proprietary driver 384.111

Blender Version
Broken: official 2.79 and 7b3e441
Worked: (optional)

Short description of error
In particle edit mode, you can add or remove weights to hair paths.
You have to enable weight brush for that.
But you can not do it for emitter particles.
So, if you enter into particle mode of a particle system to change weight on hair and quit it with weight brush enabled.
When you will enter particle edit mode of a baked emitter particle system, Blender crashes.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
particle_weight_crash.blend

In attached .blend file, select Cube with hair.
Enter into Particle Edit mode.
Select Weight Brush.
Quit to Object mode.

Select plane with baked cache of emitter particles.
Enter into Particle Edit mode -> crash

particle_weight_crash.crash.txt

**System Information** Ubuntu 16.04 and Nvidia Ttan Black proprietary driver 384.111 **Blender Version** Broken: official 2.79 and 7b3e441 Worked: (optional) **Short description of error** In particle edit mode, you can add or remove weights to hair paths. You have to enable weight brush for that. But you can not do it for emitter particles. So, if you enter into particle mode of a particle system to change weight on hair and quit it with weight brush enabled. When you will enter particle edit mode of a baked emitter particle system, Blender crashes. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps [particle_weight_crash.blend](https://archive.blender.org/developer/F1876659/particle_weight_crash.blend) In attached .blend file, select Cube with hair. Enter into Particle Edit mode. Select Weight Brush. Quit to Object mode. Select plane with baked cache of emitter particles. Enter into Particle Edit mode -> crash [particle_weight_crash.crash.txt](https://archive.blender.org/developer/F1876702/particle_weight_crash.crash.txt)

Added subscriber: @zeauro

Added subscriber: @zeauro
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-01-18 17:19:12 +01:00
Member

Can confirm this, D3008: #53823: prevent crash prevents the crash, but maybe we should spend time making sure we only have the weight brush available for hair? (@ideasman42 : I could have a look if this is worth the time...)

Can confirm this, [D3008: #53823: prevent crash](https://archive.blender.org/developer/D3008) prevents the crash, but maybe we should spend time making sure we only have the weight brush available for hair? (@ideasman42 : I could have a look if this is worth the time...)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 368414efac

This issue was referenced by 368414efacc2b7260c02b0cb77a7b24c1e054f39
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53823
No description provided.